test/error/recursive_instantiation.colgm
struct A<T> {
    x: A<A<T>>
}

struct B<T> {
    x: B<B<T>>
}

func main() ->i32 {
    var a = A<i32>::__size__();
    var b = B<i32>::__size__();
    return 0;
}