test/error/recursive_instantiation.result
Error: template instantiation depth exceeds maximum of 16:
  --> A<A<A<A<A<A<A<A<A<A<A<A<A<A<A<A<A<i32>>>>>>>>>>>>>>>>>
  --> test/error/recursive_instantiation.colgm:1:1
  | 
1 | struct A<T> {
  | ^^^^^^^^^^^^^^
2 |     x: A<A<T>>
  | ^^^^^^^^^^^^^^
3 | }
  | ^